Fixing Project Page Design

--- a/src/app/pages/nodeconfiguration/nodeconfiguration.component.html
+++ b/src/app/pages/nodeconfiguration/nodeconfiguration.component.html
@@ -274,11 +274,11 @@
 </div> -->
 
 
-<div class="pg-container px-5 h-100 w-100 d-flex flex-column">
+<div class="pg-container px-5 h-100 w-100 d-flex flex-column mt-2">
     <!-- Page Header -->
     <div class="d-flex align-items-center mb-3 ps-1">
         <div class="col">
-            <h3>Node Configuration</h3>
+            <h3 class="page-title">Node Configuration</h3>
             <p>
                 Paragraph text with style text M. Invidunt ut labore et dolore magna aliquy erat, sed diam voluptua.
                 At vero eos et accusam et jus to duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
