Implemented the api to node configuration list

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,6 +18,7 @@
   </div>
   <div class="pageContainer ">
     <div class="h-100 w-100 ">
+      <app-message-box></app-message-box>
       <router-outlet></router-outlet>
 
     </div>
