--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -1,13 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&display=swap');
 
-body{
-    width: 100%;
-    height: 100%;
-    background: #fff;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 16px;
-    line-height: 24px;
-}
+// body{
+//     width: 100%;
+//     height: 100%;
+//     background: #fff;
+//     // font-family: 'Open Sans', sans-serif;
+//     font-size: 16px;
+//     line-height: 24px;
+// }
 ul{
     padding: 0;
     margin: 0;
