--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,9 +17,9 @@
     <app-header></app-header>
   </div>
   <div class="pageContainer ">
+    <app-message-box></app-message-box>
     <div class="h-100 w-100 ">
       <router-outlet></router-outlet>
-
     </div>
   </div>
   <div [ngClass]="{'hidden': showHeaderFooter}" class="footer" style="height: 35px;">
