--- a/src/app/pages/createproject/createproject.component.html
+++ b/src/app/pages/createproject/createproject.component.html
@@ -30,3 +30,5 @@
         </div>
     </div>
 </div>
+<app-modal *ngIf="1==1" [(view)]="showModal" [header]="'Map Signatures to Appliance'"
+  [styles]="{ width: '80vw' }">
