--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
   <div [ngClass]="{'hidden': showHeaderFooter}" class="header" style="height: 100px;">
     <app-header></app-header>
   </div>
-  <div class="pageContainer ">
+  <div  [ngClass]="showHeaderFooter ? 'mainPageContainer' : 'pageContainer'" >
     <div class="h-100 w-100 ">
       <app-message-box></app-message-box>
       <router-outlet></router-outlet>
