--- a/src/app/shared/visuals/map/map.component.scss
+++ b/src/app/shared/visuals/map/map.component.scss
@@ -1,13 +1,13 @@
 @import "../../../../assets/css/variables";
 
-html,
-body {
-  padding: 0;
-  margin: 0;
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
+// html,
+// body {
+//   padding: 0;
+//   margin: 0;
+//   position: relative;
+//   width: 100%;
+//   height: 100%;
+// }
 
 #map {
   width: 100%;
