--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,12 +1,17 @@
-    <div class="footer-part h-100 w-100">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col">
-                    <p>Data Projection Notice</p>
-                </div>
-                <div class="col text-end">
-                    <p>Powered by Phantom Solution - BOSCH</p>
+<div class="footer-part p-2 h-100 w-100 shadow-lg">
+    <div class="container-fluid">
+        <div class="row" >
+            <div class="col-6" >
+                <span>&copy; Robert Bosch GmbH  {{ currentYear }}, All rights reserved.</span>
+            </div>
+            <div class="col-6">
+                <div class="row-12 gx-0 m-0 text-end">
+                    <span class="px-2">Imprint</span>
+                    <span class="px-2">Legal Information</span>
+                    <span class="px-2">Data Privacy</span>
+                    <span class="px-2">Disclosure Documents</span>
                 </div>
             </div>
         </div>
     </div>
+</div>
