--- a/src/app/card/child-module-extension/child-module-extension.component.html
+++ b/src/app/card/child-module-extension/child-module-extension.component.html
@@ -63,10 +63,10 @@
         <form>
           <div class="row gx-0 m-0">
             <div class="col mb-3 pe-3">
-              <app-input (inputValueChange)="updateValue($event)"></app-input>
+              <!-- <app-input (inputValueChange)="updateValue($event)"></app-input> -->
             </div>
             <div class=" col mb-3">
-              <app-input (inputValueChange)="updateValue($event)"></app-input>
+              <!-- <app-input (inputValueChange)="updateValue($event)"></app-input> -->
             </div>
           </div>
           
