--- a/src/app/commonComponent/input/input.component.html
+++ b/src/app/commonComponent/input/input.component.html
@@ -1,6 +1,7 @@
 <div class="input-container">
-    <span  class="fz-12px opacity-50per">Enter name</span>
-    <input type="text" (input)="onInputChange($event.target?.['value'])" placeholder="Enter Name" />
+    <span  class="fz-12px opacity-50per">{{label}}</span>
+    <input [placeholder]="placeHolder" [type]="type" [disabled]="disabled" [(ngModel)]="value"
+    (ngModelChange)="updateInputValue()" />
 </div>
   
   
