user profile logout featire

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -27,7 +27,7 @@
                                     <div class="btn-group">
                                         <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown"
                                             aria-expanded="false">
-                                            <div class="user-setting-wrap">
+                                            <div class="user-setting-wrap" (click)="logout()">
                                                 <div class="user-icon">
                                                     <img src="../../assets/images/my-brand-frame.png" alt="">
                                                 </div>
