--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,8 @@
-body {
-  font-family: 'BoschSans' !important;
-  height: 100vh;
-  width: 100vw ;
-}
-
+// body {
+//   font-family: 'BoschSans' !important;
+//   height: 100vh;
+//   width: 100vw ;
+// }
 
 .hidden {
   display: none;
@@ -12,3 +11,4 @@ body {
 .pageContainer {
   height: calc(100vh - 100px - 35px);
 }
+
