--- a/src/styles.scss
+++ b/src/styles.scss
@@ -85,6 +85,12 @@
 //   background: #fff;
 // }
 
+body {
+  font-family: 'BoschSans' !important;
+  height: 100vh;
+  width: 100vw ;
+}
+
 ol,
 ul,
 dl {
