--- a/src/app/pages/createproject/createproject.component.html
+++ b/src/app/pages/createproject/createproject.component.html
@@ -30,5 +30,18 @@
         </div>
     </div>
 </div>
-<app-modal *ngIf="1==1" [(view)]="showModal" [header]="'Map Signatures to Appliance'"
-  [styles]="{ width: '80vw' }">
+<app-modal *ngIf="1==1" [(view)]="showModal" [header]="'Set Module Properties'"
+  [styles]="{ width: '80vw'}" style="min-height: 600px;">
+    <div class="row" style="min-height: 500px; margin-top: 20px;"> 
+        <div class="col-md-6">
+            <app-select-dropdown></app-select-dropdown>
+        </div>
+        <div class="col-md-6">
+            <app-input></app-input>
+        </div>
+        <div class="col-md-6">
+            test
+        </div>
+        
+    </div>
+</app-modal>
