--- a/src/app/commonComponent/select-dropdown/select-dropdown.component.html
+++ b/src/app/commonComponent/select-dropdown/select-dropdown.component.html
@@ -1,10 +1,13 @@
 <div class="dropdown-parent">
     <ng-multiselect-dropdown
-    [placeholder]="'custom placeholder'"
+    [placeholder]="placeHolder"
     [settings]="dropdownSettings"
     [data]="dropdownList"
+    [(ngModel)]="selectedItems"
     (onSelect)="onItemSelect($event)"
     (onSelectAll)="onSelectAll($event)"
+    (onDeSelect)="onDeSelect($event)"
+    (onDeSelectAll)="onDeSelectAll($event)"
     >
     </ng-multiselect-dropdown>
 </div>
