--- a/src/app/commonComponent/select-dropdown/select-dropdown.component.scss
+++ b/src/app/commonComponent/select-dropdown/select-dropdown.component.scss
@@ -1,22 +1,57 @@
+
+@import '../../../assets/css/variables';
+
 .dropdown-parent {
     display: block;
     height: auto;
   }
   
   .multiselect-container {
-    max-height: 200px;   /* Limit height */
-    overflow-y: auto;    /* Enable scroll when content exceeds height */
+    max-height: 200px;   
+    overflow-y: auto;    
   }
   
-/* Ensure the button does not take the full height */
 .multiselect {
-    width: 100%;         /* Ensure it fits the container width */
-    max-height: 40px;     /* Adjust the max height as needed */
-    overflow: hidden;     /* Prevent it from taking full height */
+    width: 100%;         
+    max-height: 40px;    
+    overflow: hidden;    
+  }
+
+
+  ::ng-deep .selected-item{
+    display: flex;
+  }
+
+  ::ng-deep .selected-item span {
+    white-space: nowrap !important;          
+    overflow: hidden !important;             
+    text-overflow: ellipsis !important;     
+    max-width: 20ch !important;            
+    display: inline-block !important;      
+  }
+
+  ::ng-deep .multiselect-dropdown .dropdown-btn{
+    background-color: #f0f0f0 ;
+    border-radius: 0px !important;
+    border: unset !important;
+    border-bottom: 1px solid #ccc !important;
+    height: 42px ;
+  }
+
+
+  ::ng-deep .selected-item-container a {
+    /* Hide the default X text */
+    color: transparent !important;
+    padding-left: 0 !important;
+    position: relative !important;
   }
   
-  /* Make sure to reset or control padding/margin */
-  .multiselect-dropdown {
-    padding: 5px;
-    margin-bottom: 0;
+  ::ng-deep .selected-item-container a::before {
+    content: '\e118'; 
+    font-family: "Bosch-Icon" !important;
+    font-size: 14px;
+    color: white; 
+    position: absolute;
+    top: 0;
+    left: 0;
   }
