fileupload and textarea

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -27,7 +27,7 @@
                     Forget Password ?
                 </div>
             </div>
-            <div class="row">
+            <div class="row gx-0 m-0">
                 <div class="col">
                     <app-button (klick)=login() [class]="'primary justify-content-center mt-2'" [width]="'200px'">
                         Sign up </app-button>
