--- a/src/app/pages/module-extension/module-extension.component.html
+++ b/src/app/pages/module-extension/module-extension.component.html
@@ -1,4 +1,4 @@
-<div class="body-wrap">
+<div class="body-wrap px-5">
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
