--- a/src/app/card/child-module-extension/child-module-extension.component.html
+++ b/src/app/card/child-module-extension/child-module-extension.component.html
@@ -10,7 +10,7 @@
 
         </button>
       </div>
-      <button class="btn-main" data-bs-toggle="modal" data-bs-target="#createModal" >
+      <button class="btn-main" (click)="funcOpenCreateCustomModal()">
         <i class="boschicon-bosch-ic-core-data"></i>
         Create Custom {{content.title}}
       </button>
@@ -52,47 +52,40 @@
   </div>
 
   <!-- Custom Source Modal -->
-<div class="modal fade" id="createModal" tabindex="-1" aria-labelledby="createModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered modal-lg">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="createModalLabel">Create New Custom Source</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <form>
-          <div class="row gx-0 m-0">
-            <div class="col mb-3 pe-3">
-              <!-- <app-input (inputValueChange)="updateValue($event)"></app-input> -->
-            </div>
-            <div class=" col mb-3">
-              <!-- <app-input (inputValueChange)="updateValue($event)"></app-input> -->
-            </div>
+
+<app-modal *ngIf="openCreateCustomModal" [(view)]="openCreateCustomModal" [header]="'Create Custom Source'"
+  [styles]="{ width: '60vw' }">
+    <div class="modal-body">
+      <form>
+        <div class="row gx-0 m-0">
+          <div class="col mb-3 pe-3">
+            <app-input [label]="'Enter Name'" [(value)]="createCustom.name" ></app-input>
+            
           </div>
-          
-          <div class="mb-3">
-            <label for="description" class="form-label">Enter Description</label>
-            <textarea class="form-control" id="description" placeholder="Enter Description"></textarea>
+          <div class=" col mb-3">
+            <app-input [label]="'Inherited From'" [(value)]="createCustom.inherited_from" ></app-input>
           </div>
-          <hr>
-          <div class="mb-3">
-            <label for="uploadFile" class="form-label">Upload Edited Custom Source in Python File</label>
-            <div class="upload-box p-3 border border-dashed">
-              <input type="file" class="form-control-file" id="uploadFile" hidden>
-              <p class="text-center">
-                Drag and drop files/folder here or <a href="#">browse</a> to upload.
-              </p>
-            </div>
-            <a href="#">Download .py Template File</a>
-          </div>
-        </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-primary">Open Template in Jupyter Editor</button>
-      </div>
+        </div>
+        
+        <div class="mb-3">
+          <app-textarea [label]="'Description'" [placeHolder]="'Enter Description'" [(value)]="createCustom.description" ></app-textarea>
+        </div>
+        <hr>
+        <div class="mb-3">
+          <label for="uploadFile" class="form-label">Upload Edited Custom Source in Python File</label>
+          <a href="#" class="float-end">Download .py Template File</a>
+          <app-file-upload [(fileName)]="createCustom.file_name"></app-file-upload>
+        </div>
+      </form>
     </div>
-  </div>
-</div>
+    <div class="modal-footer d-flex justify-content-between">
+      <!-- <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+      <button type="button" class="btn btn-primary">Open Template in Jupyter Editor</button> -->
+      <app-button [class]="'secondary justify-content-center'"  [width]="'200px'" [fontSize]="'16px'">
+        Cancel</app-button>
+        <app-button [class]="'primary justify-content-center'" [fontSize]="'16px'">
+          Open Template in Jupyter Editor</app-button>
+    </div>
+  </app-modal>
 
   
