--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
 <div class="d-flex flex-column h-100 w-100">
   <app-loading></app-loading>
   <app-message-box></app-message-box>
+  <app-toast-box></app-toast-box>
   <ng-container *ngIf="router.url !== '/login' && router.url !== '/' && router.url !== '/createproject'">
     <div class="header" style="height: 100px;">
       <app-header></app-header>
     </div>
     <div class="pageContainer">
       <div class="h-100 w-100 ">
-        <app-message-box></app-message-box>
         <router-outlet></router-outlet>
       </div>
     </div>
